fix style on mobile change static backend to s3

--- a/pages/static/pages/style.css
+++ b/pages/static/pages/style.css
@@ -237,12 +237,13 @@ and (orientation : portrait) {
         padding: 1em;
     }
     .main-content, .side-content {
-        margin-left: 0.5em
+        margin-left: 0.5em;
+        width: calc(100% - 1em);
     }
     .side-content{
         margin-top: 0;
     }
-    .side-content article{
+    .main-content article, .side-content article{
         padding: 1em;
 
         width: calc(100% - 2em);
